# portfolio

./: Dockerfile  README_DATABASE.md  Readme.MD  add_missing_market_data.py  add_synthetic_flag.py  add_to_portfolio.py  app.py  auto.sh  check_db.py  check_historical_value.py  check_portfolio.py  check_transactions.py  docker-compose.yml  migrate_db.py  missed_execution.py  pyproject.toml  remove_from_portfolio.py  requirements.txt  ronta.ipynb  rules.py  run_tests.py  script.py  test.txt  test_country.py  trade.py  trade.sh  update_stock_info.py  utilities.py
backend/: README_market_data.md  benchmark.py  constants.py  controller.py  cron_example.txt  database.py  fetch_market_data.py  latest_market_data.json  market_interface.py  migrate_db.py  model.py  models.py  money_amount.py  portfolio.db.backup_20250629_130847  portfolio.db.backup_20250629_133942  portfolio.db.backup_20250629_135621  portfolio.db.backup_20250629_135658  portfolio.py  position.py  rate_limiter.py  stock.py  tax_calculator.py  transaction.py
backend/reports/: market_data_report_20250316_123634.json  market_data_report_20250316_123701.json
frontend/: layout.py
frontend/callbacks/: __init__.py  add_position.py  data_management.py  general.py  portfolio_breakdown.py  portfolio_performance.py  portfolio_positions.py  (+4 more)
scripts/: fetch_market_data.py
tests/: conftest.py  test_app.py  test_controller.py  test_database.py  test_fetch_market_data.py  test_market_interface.py  test_money_amount.py  test_portfolio.py  test_position.py  test_rate_limiter.py  test_sqlalchemy_db.py  test_transaction.py
