[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "JakobBull",email = "jakob.bull@yahoo.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "yfinance==0.2.63",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "curl-cffi (>=0.11.3,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
